--- a/.config/.prettierrc.json
+++ b/.config/.prettierrc.json
@@ -3,5 +3,5 @@
 	"singleQuote": false,
 	"trailingComma": "none",
 	"printWidth": 80,
-	"plugins": ["prettier-plugin-svelte", "prettier-plugin-css-order"]
+	"plugins": ["prettier-plugin-svelte"]
 }
